<resources>
    <string name="app_name">Caronte</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Agente</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Acceder</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_tablero">TableroActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="card_facturado">Facturado</string>
    <string name="card_VentasTotales">Ventas Totales</string>
    <string name="action_cuota_venta">Cuota de Venta</string>
    <string name="action_producto_facturado">Producto de Facturado</string>
    <string name="action_recuperacion_efectivo">Recuperacion de Efectivo</string>
    <string name="action_info_cliente">Info. Cliente</string>
    <string name="copy_right_1">Copyright © 2016, UNIMARK S.A.</string>
    <string name="copy_right_2">v1.1.0</string>
    <string name="act_Clientes">Clientes</string>
    <string name="act_plan_trabajo">Plan de Trabajo</string>
    <string name="app_label">Buscar</string>
    <string name="title_activity_agenda">AgendaActivity</string>
    <string name="search">Buscar</string>
    <string name="title_activity_carrito_pedido">CarritoPedidoActivity</string>
    <string name="title_activity_lista_producto">LIstaProductoActivity</string>

    <string name="Pront_No">No</string>
    <string name="Pront_NameBanco">Banco</string>
    <string name="action_today"></string>
    <string name="action_day_view">Hoy</string>
    <string name="action_three_day_view">3 dias</string>
    <string name="action_week_view">Semana</string>
    <string name="title_activity_basic">Basico</string>
    <string name="title_activity_asynchronous"></string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_location">locationActivity</string>
    <string name="latitude_label">latitud</string>
    <string name="longitude_label">longitud</string>
    <string name="activity_label">actividad</string>
    <string name="Action_step_1">Siguiente</string>
    <string name="menu_btn_corbo">COBRO</string>
    <string name="menu_btn_pedido">PEDIDO</string>
    <string name="menu_btn_reporte">REPORTE</string>
    <string name="title_activity_frm_cobro">FrmCobroActivity</string>

    <string-array name="TM">
        <item>C$</item>
        <item>$</item>
    </string-array>
    <string name="title_activity_reporte_vista">ReporteVistaActivity</string>
    <string name="title_activity_rpt_visita">Reporte Visita</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
