<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_actiones"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.guma.desarrollo.caronte.Activitys.MenuActionesActivity">


    <Button
        android:id="@+id/btnMenuPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/Blanco"
        android:text="@string/menu_btn_pedido"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>


    <Button
        android:layout_below="@id/btnMenuPedido"
        android:id="@+id/btnMenuCobro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/Blanco"
        android:text="@string/menu_btn_corbo"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>


    <Button
        android:layout_below="@id/btnMenuCobro"
        android:id="@+id/btnReporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:textColor="@color/Blanco"
        android:text="@string/menu_btn_reporte"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
